--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Jingyeli</title>
+    <STYLE TYPE="text/css">
+        p{
+            background-color: #00539F;
+            font-size: 2em;
+            text-align: center;
+        }
+    </STYLE>
+
+
 </head>
 <body>
-<p style="
-background-color: #00539F;
-   font-size: 2em;
-   text-align: center;">Hello World</p>
+
+<p>内容</p>
 
 </body>
 </html>
