external connection way

--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="index.css">
 <head>
     <meta charset="UTF-8">
     <title>Jingyeli</title>
-    <STYLE TYPE="text/css">
-        p{
-            background-color: #00539F;
-            font-size: 2em;
-            text-align: center;
-        }
-    </STYLE>
-
-
+    <!--<STYLE TYPE="text/css">-->
+        <!--p{-->
+            <!--background-color: #00539F;-->
+            <!--font-size: 2em;-->
+            <!--text-align: center;-->
+        <!--}-->
+    <!--</STYLE>-->
 </head>
 <body>
 
-<p>内容</p>
+<p>Hello world</p>
 
 </body>
 </html>
